--- a/rlox/Cargo.toml
+++ b/rlox/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "lox_treewalker"
+name = "rlox"
 version = "0.1.0"
 authors = ["Sindre Ilebekk Johansen <sindre@sindrejohansen.no>"]
 edition = "2018"
@@ -7,5 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.31"
-phf = { version = "0.8.0", features = ["macros"] }
